<resources>
    <string name="app_name">SecureWallet</string>
    <string name="user_name">user name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter">Enter</string>
    <string name="save_username">Save UserName</string>
    <string name="sign_up">SignUp</string>
    <string name="enter_finger_print">Enter by fingerprint</string>
    <string name="view_tag">view_tag</string>
    <string name="error_read_data">error to read data</string>
    <string name="no_connect_server">can not connect to server</string>
    <string name="retry">try again</string>
    <string name="not_found_item">cant find any item</string>
    <string name="field_error">this field must fill</string>
    <string name="same_pass_error_message">Two Password field must same together</string>
    <string name="show_account">Show Account</string>
    <string name="define_account">Define Account</string>
    <string name="error">error</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="help">help</string>
    <string name="sign_help">for use this application you must have google email address.</string>
    <string name="accept">accept</string>
    <string name="accept_fa">تایید</string>
    <string name="accept_en">accept</string>
    <string name="exit">exit</string>
    <string name="close_without_save">are you sure to want exit without save data?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="success">operation successfully down</string>

    //region BiometricErrorHandle
    <string name="biometric_disable">Your biometric sensor is disabled</string>
    <string name="biometric_negative">You selected navigate</string>
    <string name="biometric_no_biometric">Your device does not have biometric sensor</string>
    <string name="biometric_no_device_credential">Your biometric sensor is disabled</string>
    <string name="biometric_no_space">Your device does have free space for this operation</string>
    <string name="biometric_security_update_required">You need to update your security biometric</string>
    <string name="biometric_time_out">Timeout for this operation</string>
    <string name="biometric_unable_process">Cant Process this operation</string>
    <string name="biometric_user_canceled">You canceled this operation</string>
    <string name="biometric_error_vendor">The operation failed due to a vendor-specific error</string>
    <string name="biometric_not_found">Unknown error</string>
    <string name="biometric_authentication_failed">authentication_failed</string>
    <string name="sign_with_google">Choose one of the login method</string>
    <string name="fill_field">Please fill all field</string>
    <string name="active_biometric">Active Biometric</string>
    <string name="english">english</string>
    <string name="persian">فارسی</string>
    <string name="hi">Hi</string>
    <string name="space">\ \</string>
    <string name="cancel">cancel</string>
    <string name="log_in_biometric">Log in using your biometric credential</string>
    <string name="bio_secure_login">Biometric login for SecureWallet</string>
    <string name="need_gmail">You need gmail account for use this program</string>
    <string name="select_correct_email">You must select registered email in this application</string>
    <string name="sign_in_google">Sign in with google Account</string>
    <string name="sign_biometric_password">Sign with biometric or password</string>
    <string name="defenition_account">Defenition Account</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="account_password">Account Password</string>
    <string name="cvv2">CVV</string>
    <string name="date">Date</string>
    <string name="bank_name">Bank Name</string>
    <string name="card_number">Card Number</string>
    <string name="summery">Summery</string>
    <string name="register_account">Register Account</string>
    <string name="definition_account">Definition Account</string>
    <string name="show">Show</string>
    <string name="delete">Delete</string>
    <string name="operation_failed">Operation failed</string>
    <string name="header">header</string>
    <string name="body">body</string>
    <string name="delete_successful">Delete successful</string>
    <string name="account_list">Account list</string>
    <string name="signup_force_message">For use this program you must register in app</string>
    <string name="signup_force_title">Need to register</string>
    <string name="google_connect_problem">Can not connect with google connection. please try again later</string>
    <string name="login_information">Login Information</string>
    <string name="ok">ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>
    <string name="card_name">Card Name</string>
    <string name="sample_card_number">8888 8888 8888 8888</string>
    <string name="colon">:</string>
    <string name="add_bank_card">Add bank card</string>
    <string name="card_date">Card Date</string>
    <string name="first_password">First Password</string>
    <string name="second_password">Second Password</string>


    //endregion

</resources>
